clusters/wrtk8s/miniflux/miniflux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: ghcr.io/miniflux/miniflux:2.3.3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
spec:
  selector:
    app: miniflux
  ports:
    - port: 8080
      targetPort: 8080
